force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <label>登録前研修・面談</label>
    <pluralLabel>登録前研修・面談</pluralLabel>
    <nameField>
        <displayFormat>開催{YYMM}-{0000}</displayFormat>
        <label>開催番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>