force-app/main/default/objects/Interview__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <inlineHelpText>例：西葛西駅から徒歩１５分</inlineHelpText>
    <label>アクセス</label>
    <length>50</length>
    <type>Text</type>
</CustomField>