force-app/main/default/objects/Interview__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>会場名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>