force-app/main/default/objects/Interview__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>申込人数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>