force-app/main/default/objects/Interview__c/fields/DetailRoom__c.field-meta.xml
<CustomField>
    <fullName>DetailRoom__c</fullName>
    <label>詳細</label>
    <length>60</length>
    <type>Text</type>
</CustomField>