force-app/main/default/objects/Interview__c/fields/EmergencyContact__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact__c</fullName>
    <label>連絡先</label>
    <type>Phone</type>
</CustomField>