force-app/main/default/objects/Interview__c/fields/Empty__c.field-meta.xml
<CustomField>
    <fullName>Empty__c</fullName>
    <formula
  >IF (OR(Application__c /  Capacity__c &lt;= 0.8, ISNULL(Application__c)), &quot;○&quot;, 
IF((Application__c /  Capacity__c &lt; 1)  &amp;&amp;  
(Application__c /  Capacity__c &gt; 0.8), &quot;△&quot;,&quot;×&quot;) )</formula>
    <label>空き状況</label>
    <type>Text</type>
</CustomField>