force-app/main/default/objects/Interview__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>終了時刻</label>
    <type>Time</type>
</CustomField>