force-app/main/default/objects/Interview__c/fields/InterviewStatus__c.field-meta.xml
<CustomField>
    <fullName>InterviewStatus__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>変更中</fullName>
            </value>
            <value>
                <fullName>公開中</fullName>
            </value>
            <value>
                <fullName>終了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>