force-app/main/default/objects/Interview__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <label>開催日</label>
    <type>Date</type>
</CustomField>