force-app/main/default/objects/Interview__c/fields/ReleaseDay__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDay__c</fullName>
    <label>公開日</label>
    <type>Date</type>
</CustomField>