force-app/main/default/objects/Interview__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>件名</label>
    <length>24</length>
    <type>Text</type>
</CustomField>