force-app/main/default/objects/Interview__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>担当</label>
    <length>30</length>
    <type>Text</type>
</CustomField>