force-app/main/default/objects/Interview__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>開始時刻</label>
    <type>Time</type>
</CustomField>