force-app/main/default/objects/Interview__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <formula
  >IF(ISPICKVAL(InterviewStatus__c,&apos;新規&apos;), &apos;新規登録&apos;, 
IF(ISPICKVAL(InterviewStatus__c,&apos;変更中&apos;),&apos;変更中&apos;, 
IF(ISPICKVAL(InterviewStatus__c,&apos;公開中&apos;), &apos;掲載中&apos;, 
IF(ISPICKVAL(InterviewStatus__c,&apos;終了&apos;), &apos;掲載終了&apos;, &apos;&apos;))))</formula>
    <label>状況</label>
    <type>Text</type>
</CustomField>