force-app/main/default/objects/Interview__c/fields/TelRemake__c.field-meta.xml
<CustomField>
    <fullName>TelRemake__c</fullName>
    <formula>IF(LEN( EmergencyContact__c ) == 11, 
&quot;(&quot; &amp; LEFT(EmergencyContact__c , 3) &amp; &quot;)-&quot; &amp; MID(EmergencyContact__c, 4, 4) &amp; &quot;-&quot; &amp; RIGHT(EmergencyContact__c, 4), &quot;&quot;)</formula>
    <label>連絡先</label>
    <type>Text</type>
</CustomField>