force-app/main/default/objects/Interview__c/recordTypes/RecordType_Finish.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Finish</fullName>
    <active>true</active>
    <description>レコードタイプ終了</description>
    <label>終了</label>
</RecordType>