force-app/main/default/objects/Interview__c/recordTypes/RecordType_New.recordType-meta.xml
<RecordType>
    <fullName>RecordType_New</fullName>
    <active>true</active>
    <description>学校から登録された募集情報</description>
    <label>新規</label>
</RecordType>