force-app/main/default/objects/Interview__c/recordTypes/RecordType_Release.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Release</fullName>
    <active>true</active>
    <description>機構の承認後、求職者に公開</description>
    <label>公開</label>
</RecordType>