force-app/main/default/objects/Interview__c/validationRules/Access_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Access_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( Access__c ), ISBLANK(Access__c )  )</errorConditionFormula>
    <errorDisplayField>Access__c</errorDisplayField>
    <errorMessage>アクセスを入力してください</errorMessage>
</ValidationRule>