force-app/main/default/objects/Interview__c/validationRules/Adress_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Adress_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( Adress__c ), ISBLANK(Adress__c )  )</errorConditionFormula>
    <errorDisplayField>Adress__c</errorDisplayField>
    <errorMessage>会場名を入力してください</errorMessage>
</ValidationRule>