force-app/main/default/objects/Interview__c/validationRules/DetailRoom_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>DetailRoom_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( DetailRoom__c ), ISBLANK(DetailRoom__c )  )</errorConditionFormula>
    <errorDisplayField>DetailRoom__c</errorDisplayField>
    <errorMessage>詳細を入力してください</errorMessage>
</ValidationRule>