force-app/main/default/objects/Interview__c/validationRules/EndTime_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>EndTime_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND( StartTime__c &gt;=  EndTime__c )</errorConditionFormula>
    <errorDisplayField>StartTime__c</errorDisplayField>
    <errorMessage>開始時刻・終了時刻を正しく入力してください</errorMessage>
</ValidationRule>