force-app/main/default/objects/Interview__c/validationRules/OpenDate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>OpenDate_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( OpenDate__c ), ISBLANK(OpenDate__c )  )</errorConditionFormula>
    <errorDisplayField>OpenDate__c</errorDisplayField>
    <errorMessage>開催日を入力してください</errorMessage>
</ValidationRule>