force-app/main/default/objects/Interview__c/validationRules/Room_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Room_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( Room__c ), ISBLANK(Room__c )  )</errorConditionFormula>
    <errorDisplayField>Room__c</errorDisplayField>
    <errorMessage>件名を入力してください</errorMessage>
</ValidationRule>