force-app/main/default/objects/Interview__c/validationRules/Staff_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( Staff__c ), ISBLANK(Staff__c )  )</errorConditionFormula>
    <errorDisplayField>Staff__c</errorDisplayField>
    <errorMessage>担当を入力してください</errorMessage>
</ValidationRule>