force-app/main/default/objects/Interview__c/validationRules/StartTime_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>StartTime_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(ISNULL( StartTime__c ), ISBLANK(StartTime__c )  )</errorConditionFormula>
    <errorDisplayField>StartTime__c</errorDisplayField>
    <errorMessage>開始時刻を入力してください</errorMessage>
</ValidationRule>