force-app/main/default/objects/Interview__c/listViews/Interview_New_View.listView-meta.xml
<ListView>
    <fullName>Interview_New_View</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Adress__c</columns>
    <columns>OpenDate__c</columns>
    <columns>StartTime__c</columns>
    <columns>Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterviewStatus__c</field>
        <operation>equals</operation>
        <value>新規</value>
    </filters>
    <filters>
        <field>InterviewStatus__c</field>
        <operation>equals</operation>
        <value>変更中</value>
    </filters>
    <label>001_研修登録（掲載前）</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>